--- a/Estilos.css
+++ b/Estilos.css
@@ -1,3 +1,18 @@
+*{
+    margin: 0px;
+    padding: 0px;
+}
+body{
+    height: 100vh;
+    width: 100%;
+    position: relative;
+}
+footer{
+    display: flex;
+    position:relative;
+    padding: 0px;
+
+}
 .caja_principal{
     display: flex;
     flex-direction: column;
@@ -32,14 +47,12 @@
 }
 .caja_descripcion{
     display: flex;
-    justify-items: flex-start;
-    align-items: flex-start;
     flex-direction: column;
 }
 .caja_footer{
     height: 18rem;
-    width: 100vw;
-    background-color: rgb(8, 8, 78);
+    width: 100%;
+    background-color: black;
 }
 img{
     width: 350px;
@@ -48,7 +61,8 @@ img{
 .h2 {
     color: black;
     width: 350px;
-    height: 40px;
+    height: 50px;
+    padding: 1rem;
 }
 .h1{
     color: rgb(184, 236, 238);
@@ -65,3 +79,25 @@ p{
 i{
     color: rgb(17, 17, 87);
 }
+@media(max-width:800px){
+    .caja_contenido{
+        justify-items: center;
+        align-items: center;
+        flex-direction: column;
+    }
+    .caja_banner{
+        display: flex;
+        height: 25rem;
+        width: 100vw;
+        justify-items: center;
+        align-items: center;
+    }
+    .h1{
+        display: flex;
+        color: rgb(184, 236, 238);
+        font-size: 35px; 
+        font-weight: 900;   
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
+        text-align: center;
+    }
+    }
