--- a/Estilos.css
+++ b/Estilos.css
@@ -79,7 +79,7 @@ p{
 i{
     color: rgb(17, 17, 87);
 }
-@media(max-width:800px){
+@media(max-width:767px){
     .caja_contenido{
         justify-items: center;
         align-items: center;
@@ -101,3 +101,106 @@ i{
         text-align: center;
     }
     }
+
+    @media(max-width:767px){
+        .caja_contenido{
+            justify-items: center;
+            align-items: center;
+            flex-direction: column;
+        }
+        .caja_banner{
+            display: flex;
+            height: 25rem;
+            width: 100vw;
+            justify-items: center;
+            align-items: center;
+        }
+        .h1{
+            display: flex;
+            color: rgb(184, 236, 238);
+            font-size: 35px; 
+            font-weight: 900;   
+            font-family: Verdana, Geneva, Tahoma, sans-serif;
+            text-align: center;
+        }
+        }
+        @media(max-width:768px) and (min-width:990px){
+            .caja_contenido{
+                justify-items: center;
+                align-items: center;
+                flex-direction: column;
+            }
+            .caja_banner{
+                display: flex;
+                height: 25rem;
+                width: 100vw;
+                justify-items: center;
+                align-items: center;
+            }
+            .h1{
+                display: flex;
+                color: rgb(184, 236, 238);
+                font-size: 35px; 
+                font-weight: 900;   
+                font-family: Verdana, Geneva, Tahoma, sans-serif;
+                text-align: center;
+            }
+            }
+            /* COMPUTADORA */
+            @media(max-width:768px) and (min-width:990px){
+                .caja_principal{
+                    display: flex;
+                    flex-direction: column;
+                    background-color: rgb(236, 236, 241);
+                }
+                .caja_banner{
+                    display: flex;
+                    justify-content: center;
+                    flex-direction: column;
+                    align-items: center;
+                    background-image: url(ba.jpg);
+                    background-repeat: no-repeat;
+                    background-size:cover;
+                    width: 100%;
+                    height: 600px;
+                    margin-bottom: 40px;
+                }
+                .caja_contenido{
+                    display: flex;
+                    justify-content: space-around; 
+                }
+                .caja_eventos{
+                    display: flex;
+                    background-color: aliceblue;
+                    justify-items: center;
+                    align-items: center;
+                    flex-direction: column;
+                    box-shadow:1px 1px 18px 2px rgb(192, 183, 192);
+                    margin: 25px;
+                    width: 350px;
+                    height: 500px;
+                }
+                .caja_descripcion{
+                    display: flex;
+                    flex-direction: column;.caja_contenido{
+                    justify-items: center;
+                    align-items: center;
+                    flex-direction: column;
+                }
+                .caja_banner{
+                    display: flex;
+                    height: 25rem;
+                    width: 100vw;
+                    justify-items: center;
+                    align-items: center;
+                }
+                .h1{
+                    display: flex;
+                    color: rgb(184, 236, 238);
+                    font-size: 35px; 
+                    font-weight: 900;   
+                    font-family: Verdana, Geneva, Tahoma, sans-serif;
+                    text-align: center;
+                }
+            }
+                }
