--- a/Estilos.css
+++ b/Estilos.css
@@ -51,7 +51,7 @@ footer{
 .caja_footer{
     height: 18rem;
     width: 100%;
-    background-color: black;
+    background-color: rgb(25, 10, 110);
 }
 img{
     width: 350px;
