se añade el boton y se corrijen los espaciados

--- a/Estilos.css
+++ b/Estilos.css
@@ -95,7 +95,7 @@ i{
 }
 
 @media(max-width:1080px){
-        .descriptionBox{
+        .mainBox{
             justify-items: center;
             align-items: center;
             flex-direction: column;
